src/parser/tikzjs.js
// Generated by Peggy 3.0.2.
//
// https://peggyjs.org/

"use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { start: peg$parsestart };
  var peg$startRuleFunction = peg$parsestart;

  var peg$c0 = "\\tikz";
  var peg$c1 = "\\tikzjs";
  var peg$c2 = "\\tikzpicture";
  var peg$c3 = "\\tikzjspicture";
  var peg$c4 = "option";
  var peg$c5 = "env_test";
  var peg$c6 = "\\begin";
  var peg$c7 = "\\end";
  var peg$c8 = "canvas cs";
  var peg$c9 = "x";
  var peg$c10 = "y";
  var peg$c11 = "canvas polar cs";
  var peg$c12 = "angle";
  var peg$c13 = "radius";
  var peg$c14 = "cm";
  var peg$c15 = "mm";
  var peg$c16 = "pt";
  var peg$c17 = "ex";
  var peg$c18 = "square";
  var peg$c19 = "circle";
  var peg$c20 = "(";
  var peg$c21 = ")";
  var peg$c22 = "}";
  var peg$c23 = "{";
  var peg$c24 = "[";
  var peg$c25 = "]";
  var peg$c26 = ",";
  var peg$c27 = ":";
  var peg$c28 = ";";
  var peg$c29 = "=";
  var peg$c30 = "..";
  var peg$c31 = ".";
  var peg$c32 = "0";

  var peg$r0 = /^[ \t\n\r]/;
  var peg$r1 = /^[0-9]/;
  var peg$r2 = /^[1-9]/;

  var peg$e0 = peg$literalExpectation("\\tikz", false);
  var peg$e1 = peg$literalExpectation("\\tikzjs", false);
  var peg$e2 = peg$literalExpectation("\\tikzpicture", false);
  var peg$e3 = peg$literalExpectation("\\tikzjspicture", false);
  var peg$e4 = peg$otherExpectation("global option list");
  var peg$e5 = peg$otherExpectation("global option");
  var peg$e6 = peg$otherExpectation("global bool option");
  var peg$e7 = peg$literalExpectation("option", false);
  var peg$e8 = peg$literalExpectation("env_test", false);
  var peg$e9 = peg$literalExpectation("\\begin", false);
  var peg$e10 = peg$literalExpectation("\\end", false);
  var peg$e11 = peg$literalExpectation("canvas cs", false);
  var peg$e12 = peg$literalExpectation("x", false);
  var peg$e13 = peg$literalExpectation("y", false);
  var peg$e14 = peg$literalExpectation("canvas polar cs", false);
  var peg$e15 = peg$literalExpectation("angle", false);
  var peg$e16 = peg$literalExpectation("radius", false);
  var peg$e17 = peg$literalExpectation("cm", false);
  var peg$e18 = peg$literalExpectation("mm", false);
  var peg$e19 = peg$literalExpectation("pt", false);
  var peg$e20 = peg$literalExpectation("ex", false);
  var peg$e21 = peg$literalExpectation("square", false);
  var peg$e22 = peg$literalExpectation("circle", false);
  var peg$e23 = peg$literalExpectation("(", false);
  var peg$e24 = peg$literalExpectation(")", false);
  var peg$e25 = peg$literalExpectation("}", false);
  var peg$e26 = peg$literalExpectation("{", false);
  var peg$e27 = peg$literalExpectation("[", false);
  var peg$e28 = peg$literalExpectation("]", false);
  var peg$e29 = peg$literalExpectation(",", false);
  var peg$e30 = peg$literalExpectation(":", false);
  var peg$e31 = peg$literalExpectation(";", false);
  var peg$e32 = peg$literalExpectation("=", false);
  var peg$e33 = peg$literalExpectation("..", false);
  var peg$e34 = peg$literalExpectation(".", false);
  var peg$e35 = peg$otherExpectation("whitespace");
  var peg$e36 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  var peg$e37 = peg$literalExpectation("0", false);
  var peg$e38 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e39 = peg$classExpectation([["1", "9"]], false, false);

  var peg$f0 = function(t) {return new ast.ASTNode({type:'root', location: location()}) };
  var peg$f1 = function(p) {return new ast.ASTNode({type:'root', location: location()})};
  var peg$f2 = function(h, opt, c) {return {
  tikzoption: opt,
  tikzcontent: c
}};
  var peg$f3 = function(h, opt, c, t) {return {tikzoption: opt, tikzcontent:c}};
  var peg$f4 = function(x) {return x;};
  var peg$f5 = function() {return {}};
  var peg$f6 = function(gbo) {return gbo};
  var peg$f7 = function() {
      return { type: 'Literal', value: parseFloat(text()) };
    };
  var peg$f8 = function() {
      return { type: 'Literal', value: parseFloat(text()) };
    };
  var peg$f9 = function() {
      return { type: 'Literal', value: parseFloat(text()) };
    };
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsetikz();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f0(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsetikzpicture();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f1(s1);
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parsetikz() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parsetikzhead();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsetikzoption();
      if (s2 !== peg$FAILED) {
        s3 = peg$parselbrace();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsetikzcontent();
          s5 = peg$parserbrace();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f2(s1, s2, s4);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsetikzpicture() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parsetikzpicturehead();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsetikzoption();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsetikzcontent();
        s4 = peg$parsetikzpicturetail();
        if (s4 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f3(s1, s2, s3, s4);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsetikzhead() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parsews();
    if (input.substr(peg$currPos, 5) === peg$c0) {
      s2 = peg$c0;
      peg$currPos += 5;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s2 === peg$FAILED) {
      if (input.substr(peg$currPos, 7) === peg$c1) {
        s2 = peg$c1;
        peg$currPos += 7;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parsews();
      s1 = [s1, s2, s3];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsetikzpicturehead() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parsebegin();
    if (s1 !== peg$FAILED) {
      s2 = peg$parselbrace();
      if (s2 !== peg$FAILED) {
        if (input.substr(peg$currPos, 12) === peg$c2) {
          s3 = peg$c2;
          peg$currPos += 12;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s3 === peg$FAILED) {
          if (input.substr(peg$currPos, 14) === peg$c3) {
            s3 = peg$c3;
            peg$currPos += 14;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e3); }
          }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parserbrace();
          if (s4 !== peg$FAILED) {
            s1 = [s1, s2, s3, s4];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsetikzpicturetail() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parseend();
    if (s1 !== peg$FAILED) {
      s2 = peg$parselbrace();
      if (s2 !== peg$FAILED) {
        if (input.substr(peg$currPos, 12) === peg$c2) {
          s3 = peg$c2;
          peg$currPos += 12;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s3 === peg$FAILED) {
          if (input.substr(peg$currPos, 14) === peg$c3) {
            s3 = peg$c3;
            peg$currPos += 14;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e3); }
          }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parserbrace();
          if (s4 !== peg$FAILED) {
            s1 = [s1, s2, s3, s4];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsetikzoption() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parselbracket();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseoption_list_gl();
      s3 = peg$parserbracket();
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f4(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsetikzcontent() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsews();
    peg$savedPos = s0;
    s1 = peg$f5();
    s0 = s1;

    return s0;
  }

  function peg$parseoption_list_gl() {
    var s0, s1, s2;

    peg$silentFails++;
    s0 = [];
    s1 = peg$parseoption_gl();
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = peg$currPos;
      s2 = peg$parsecomma();
      if (s2 !== peg$FAILED) {
        s2 = peg$parseoption_gl();
        if (s2 === peg$FAILED) {
          peg$currPos = s1;
          s1 = peg$FAILED;
        } else {
          s1 = s2;
        }
      } else {
        s1 = s2;
      }
    }
    peg$silentFails--;
    s1 = peg$FAILED;
    if (peg$silentFails === 0) { peg$fail(peg$e4); }

    return s0;
  }

  function peg$parseoption_gl() {
    var s0, s1;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parsebool_option_gl();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f6(s1);
    }
    s0 = s1;
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }

    return s0;
  }

  function peg$parsebool_option_gl() {
    var s0, s1;

    peg$silentFails++;
    if (input.substr(peg$currPos, 6) === peg$c4) {
      s0 = peg$c4;
      peg$currPos += 6;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e7); }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e6); }
    }

    return s0;
  }

  function peg$parsebegin_env() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parsebegin();
    if (s1 !== peg$FAILED) {
      s2 = peg$parselbrace();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseenv_name();
        if (s3 !== peg$FAILED) {
          s4 = peg$parserbrace();
          if (s4 !== peg$FAILED) {
            s1 = [s1, s2, s3, s4];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseend_env() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parseend();
    if (s1 !== peg$FAILED) {
      s2 = peg$parselbrace();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseenv_name();
        if (s3 !== peg$FAILED) {
          s4 = peg$parserbrace();
          if (s4 !== peg$FAILED) {
            s1 = [s1, s2, s3, s4];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseenv_name() {
    var s0;

    if (input.substr(peg$currPos, 8) === peg$c5) {
      s0 = peg$c5;
      peg$currPos += 8;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e8); }
    }

    return s0;
  }

  function peg$parsebegin() {
    var s0;

    if (input.substr(peg$currPos, 6) === peg$c6) {
      s0 = peg$c6;
      peg$currPos += 6;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e9); }
    }

    return s0;
  }

  function peg$parseend() {
    var s0;

    if (input.substr(peg$currPos, 4) === peg$c7) {
      s0 = peg$c7;
      peg$currPos += 4;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e10); }
    }

    return s0;
  }

  function peg$parsecoordinate() {
    var s0;

    s0 = peg$parsecoordinate_canvas();
    if (s0 === peg$FAILED) {
      s0 = peg$parsecoordinate_canvas_polar();
    }

    return s0;
  }

  function peg$parsecoordinate_canvas() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    s0 = peg$currPos;
    s1 = peg$parselpar();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseshift_expr();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsecomma();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseshift_expr();
          if (s4 !== peg$FAILED) {
            s5 = peg$parserpar();
            if (s5 !== peg$FAILED) {
              s1 = [s1, s2, s3, s4, s5];
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parselpar();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 9) === peg$c8) {
          s2 = peg$c8;
          peg$currPos += 9;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e11); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsecolon();
          if (s3 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 120) {
              s4 = peg$c9;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e12); }
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseeq();
              if (s5 !== peg$FAILED) {
                s6 = peg$parseshift_expr();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parsecomma();
                  if (s7 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 121) {
                      s8 = peg$c10;
                      peg$currPos++;
                    } else {
                      s8 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e13); }
                    }
                    if (s8 !== peg$FAILED) {
                      s9 = peg$parseeq();
                      if (s9 !== peg$FAILED) {
                        s10 = peg$parseshift_expr();
                        if (s10 !== peg$FAILED) {
                          s11 = peg$parserpar();
                          if (s11 !== peg$FAILED) {
                            s1 = [s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11];
                            s0 = s1;
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parsecoordinate_canvas_polar() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;
